[package]
name = "Gear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry = { path = "../Foundry" }
sdl2 = { version = "0.35.2", features = ["bundled", "static-link"] }
gl = "0.14.0"
cgmath = "0.18.0"
