[package]
name = "Gear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
foundry = { path = "../Foundry" }
glfw = "0.48.0"
gl = "0.14.0"
cgmath = "0.18.0"
refbox = "0.3.0"
image = "0.24.4"
gear-macros-derive = { path = "./deps/gear-macros-derive" }